[gd_scene load_steps=32 format=2]

[ext_resource path="res://system/tios_main.gd" type="Script" id=1]
[ext_resource path="res://system/camera_rig.gd" type="Script" id=2]
[ext_resource path="res://features/shared/amiga.material" type="Material" id=3]
[ext_resource path="res://system/world_enviroment_fantasy.tres" type="Environment" id=4]
[ext_resource path="res://sounds/samples/joungle_back1.ogg" type="AudioStream" id=5]
[ext_resource path="res://sounds/code/loop_sample.gd" type="Script" id=6]
[ext_resource path="res://sounds/samples/joungle_back2.ogg" type="AudioStream" id=7]
[ext_resource path="res://sounds/samples/soundscape1.ogg" type="AudioStream" id=8]
[ext_resource path="res://maps/world_map.tscn" type="PackedScene" id=9]
[ext_resource path="res://features/grass/code/new_grass_1.material" type="Material" id=10]
[ext_resource path="res://features/grass/code/grass.shader" type="Shader" id=11]
[ext_resource path="res://features/grass/tex/new_grass-1a.png" type="Texture" id=12]
[ext_resource path="res://features/grass/tex/new_grass-1c.png" type="Texture" id=13]
[ext_resource path="res://features/gui/theme.tres" type="Theme" id=14]
[ext_resource path="res://features/gui/tios-logo.png" type="Texture" id=15]
[ext_resource path="res://features/gui/fps.gd" type="Script" id=16]
[ext_resource path="res://features/shared/island_0_entities_map.png" type="Texture" id=17]
[ext_resource path="res://system/gimp-logo.png" type="Texture" id=18]
[ext_resource path="res://system/godot.png" type="Texture" id=19]
[ext_resource path="res://system/Wings3d.png" type="Texture" id=20]
[ext_resource path="res://features/gui/p1x_pixelart.png" type="Texture" id=21]
[ext_resource path="res://features/gui/corners.tscn" type="PackedScene" id=22]
[ext_resource path="res://features/shared/voronoid.material" type="Material" id=23]

[sub_resource type="Animation" id=1]

resource_name = "menu"
length = 8.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -30, -50, 0 ), Vector3( -30, -128, 0 ) ]
}

[sub_resource type="SphereMesh" id=2]

material = ExtResource( 3 )
custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
flip_faces = false
radius = 4.0
height = 8.0
radial_segments = 16
rings = 8
is_hemisphere = false
_sections_unfolded = [ "material" ]

[sub_resource type="ShaderMaterial" id=3]

render_priority = 0
shader = ExtResource( 11 )
shader_param/amplitude = 0.6
shader_param/speed = Vector2( 1.4, 1.5 )
shader_param/scale = Vector2( 0.1, 0.2 )
shader_param/texture_map = ExtResource( 12 )
_sections_unfolded = [ "Shader Param", "shader", "shader_param", "shader_param/texture_map" ]

[sub_resource type="ShaderMaterial" id=4]

render_priority = 0
shader = ExtResource( 11 )
shader_param/amplitude = 0.6
shader_param/speed = Vector2( 1.4, 1.5 )
shader_param/scale = Vector2( 0.1, 0.2 )
shader_param/texture_map = ExtResource( 13 )
_sections_unfolded = [ "Shader Param", "shader", "shader_param", "shader_param/texture_map" ]

[sub_resource type="ArrayMesh" id=5]

blend_shape_mode = 1
custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
surfaces/0 = {
"aabb": AABB( -4.82319, -1.36941, -0.199925, 10, 14.06, 0.005 ),
"array_data": PoolByteArray( 112, 168, 165, 64, 220, 72, 175, 191, 24, 185, 76, 190, 0, 129, 0, 0, 144, 87, 154, 192, 220, 72, 175, 191, 24, 185, 76, 190, 0, 129, 0, 0, 112, 168, 165, 64, 220, 72, 175, 191, 96, 154, 71, 190, 0, 129, 0, 0, 144, 87, 154, 192, 220, 72, 175, 191, 96, 154, 71, 190, 0, 129, 0, 0, 112, 168, 165, 64, 167, 12, 75, 65, 96, 154, 71, 190, 0, 127, 0, 0, 144, 87, 154, 192, 167, 12, 75, 65, 96, 154, 71, 190, 0, 127, 0, 0, 112, 168, 165, 64, 167, 12, 75, 65, 24, 185, 76, 190, 0, 127, 0, 0, 144, 87, 154, 192, 167, 12, 75, 65, 24, 185, 76, 190, 0, 127, 0, 0, 144, 87, 154, 192, 220, 72, 175, 191, 96, 154, 71, 190, 129, 0, 0, 0, 144, 87, 154, 192, 220, 72, 175, 191, 24, 185, 76, 190, 129, 0, 0, 0, 144, 87, 154, 192, 167, 12, 75, 65, 96, 154, 71, 190, 129, 0, 0, 0, 144, 87, 154, 192, 167, 12, 75, 65, 24, 185, 76, 190, 129, 0, 0, 0, 112, 168, 165, 64, 167, 12, 75, 65, 96, 154, 71, 190, 127, 0, 0, 0, 112, 168, 165, 64, 167, 12, 75, 65, 24, 185, 76, 190, 127, 0, 0, 0, 112, 168, 165, 64, 220, 72, 175, 191, 96, 154, 71, 190, 127, 0, 0, 0, 112, 168, 165, 64, 220, 72, 175, 191, 24, 185, 76, 190, 127, 0, 0, 0 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 2, 0, 1, 0, 3, 0, 4, 0, 5, 0, 6, 0, 6, 0, 5, 0, 7, 0, 8, 0, 9, 0, 10, 0, 10, 0, 9, 0, 11, 0, 12, 0, 13, 0, 14, 0, 14, 0, 13, 0, 15, 0 ),
"blend_shape_data": [  ],
"format": 97539,
"index_count": 24,
"name": "default",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 16
}
surfaces/1 = {
"aabb": AABB( -4.82319, -1.36941, -0.199925, 10, 14.06, 0.005 ),
"array_data": PoolByteArray( 112, 168, 165, 64, 167, 12, 75, 65, 24, 185, 76, 190, 0, 0, 129, 0, 127, 0, 0, 127, 0, 60, 0, 0, 144, 87, 154, 192, 167, 12, 75, 65, 24, 185, 76, 190, 0, 0, 129, 0, 126, 0, 0, 127, 0, 0, 0, 0, 112, 168, 165, 64, 220, 72, 175, 191, 24, 185, 76, 190, 0, 0, 129, 0, 126, 0, 0, 127, 0, 60, 0, 60, 144, 87, 154, 192, 220, 72, 175, 191, 24, 185, 76, 190, 0, 0, 129, 0, 127, 0, 0, 127, 0, 0, 0, 60, 112, 168, 165, 64, 220, 72, 175, 191, 96, 154, 71, 190, 0, 0, 127, 0, 127, 0, 0, 129, 0, 60, 0, 60, 144, 87, 154, 192, 220, 72, 175, 191, 96, 154, 71, 190, 0, 0, 127, 0, 126, 0, 0, 129, 0, 0, 0, 60, 112, 168, 165, 64, 167, 12, 75, 65, 96, 154, 71, 190, 0, 0, 127, 0, 126, 0, 0, 129, 0, 60, 0, 0, 144, 87, 154, 192, 167, 12, 75, 65, 96, 154, 71, 190, 0, 0, 127, 0, 127, 0, 0, 129, 0, 0, 0, 0 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 2, 0, 1, 0, 3, 0, 4, 0, 5, 0, 6, 0, 6, 0, 5, 0, 7, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 12,
"material": ExtResource( 10 ),
"name": "image",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 8
}
surfaces/2 = {
"aabb": AABB( -1.27174, -0.959071, -3.34456, 3.25755, 14.992, 6.66327 ),
"array_data": PoolByteArray( 34, 183, 253, 63, 166, 133, 117, 191, 77, 13, 86, 192, 0, 129, 0, 0, 112, 200, 162, 191, 166, 133, 117, 191, 89, 77, 84, 64, 0, 129, 0, 0, 224, 46, 254, 63, 166, 133, 117, 191, 1, 245, 85, 192, 0, 129, 0, 0, 178, 80, 162, 191, 166, 133, 117, 191, 166, 101, 84, 64, 0, 129, 0, 0, 224, 46, 254, 63, 225, 134, 96, 65, 1, 245, 85, 192, 0, 127, 0, 0, 178, 80, 162, 191, 225, 134, 96, 65, 166, 101, 84, 64, 0, 127, 0, 0, 34, 183, 253, 63, 225, 134, 96, 65, 77, 13, 86, 192, 0, 127, 0, 0, 112, 200, 162, 191, 225, 134, 96, 65, 89, 77, 84, 64, 0, 127, 0, 0, 178, 80, 162, 191, 166, 133, 117, 191, 166, 101, 84, 64, 209, 0, 117, 0, 112, 200, 162, 191, 166, 133, 117, 191, 89, 77, 84, 64, 209, 0, 117, 0, 178, 80, 162, 191, 225, 134, 96, 65, 166, 101, 84, 64, 209, 0, 117, 0, 112, 200, 162, 191, 225, 134, 96, 65, 89, 77, 84, 64, 209, 0, 117, 0, 224, 46, 254, 63, 225, 134, 96, 65, 1, 245, 85, 192, 47, 0, 139, 0, 34, 183, 253, 63, 225, 134, 96, 65, 77, 13, 86, 192, 47, 0, 139, 0, 224, 46, 254, 63, 166, 133, 117, 191, 1, 245, 85, 192, 47, 0, 139, 0, 34, 183, 253, 63, 166, 133, 117, 191, 77, 13, 86, 192, 47, 0, 139, 0 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 2, 0, 1, 0, 3, 0, 4, 0, 5, 0, 6, 0, 6, 0, 5, 0, 7, 0, 8, 0, 9, 0, 10, 0, 10, 0, 9, 0, 11, 0, 12, 0, 13, 0, 14, 0, 14, 0, 13, 0, 15, 0 ),
"blend_shape_data": [  ],
"format": 97539,
"index_count": 24,
"name": "default",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 16
}
surfaces/3 = {
"aabb": AABB( -1.27174, -0.959071, -3.34456, 3.25755, 14.992, 6.66327 ),
"array_data": PoolByteArray( 34, 183, 253, 63, 225, 134, 96, 65, 77, 13, 86, 192, 142, 0, 201, 0, 55, 0, 142, 127, 0, 60, 0, 0, 112, 200, 162, 191, 225, 134, 96, 65, 89, 77, 84, 64, 142, 0, 201, 0, 55, 0, 142, 127, 0, 0, 0, 0, 34, 183, 253, 63, 166, 133, 117, 191, 77, 13, 86, 192, 142, 0, 201, 0, 55, 0, 142, 127, 0, 60, 0, 60, 112, 200, 162, 191, 166, 133, 117, 191, 89, 77, 84, 64, 142, 0, 201, 0, 55, 0, 142, 127, 0, 0, 0, 60, 224, 46, 254, 63, 166, 133, 117, 191, 1, 245, 85, 192, 114, 0, 55, 0, 55, 0, 142, 129, 0, 60, 0, 60, 178, 80, 162, 191, 166, 133, 117, 191, 166, 101, 84, 64, 114, 0, 55, 0, 55, 0, 142, 129, 0, 0, 0, 60, 224, 46, 254, 63, 225, 134, 96, 65, 1, 245, 85, 192, 114, 0, 55, 0, 55, 0, 142, 129, 0, 60, 0, 0, 178, 80, 162, 191, 225, 134, 96, 65, 166, 101, 84, 64, 114, 0, 55, 0, 55, 0, 142, 129, 0, 0, 0, 0 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 2, 0, 1, 0, 3, 0, 4, 0, 5, 0, 6, 0, 6, 0, 5, 0, 7, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 12,
"material": SubResource( 3 ),
"name": "image",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 8
}
surfaces/4 = {
"aabb": AABB( -3.849, -0.353718, -8.0527, 8.68657, 12.348, 15.8009 ),
"array_data": PoolByteArray( 75, 205, 154, 64, 136, 26, 181, 190, 218, 187, 247, 64, 0, 129, 0, 0, 153, 71, 118, 192, 136, 26, 181, 190, 217, 215, 0, 193, 0, 129, 0, 0, 11, 198, 154, 64, 136, 26, 181, 190, 43, 241, 247, 64, 0, 129, 0, 0, 24, 86, 118, 192, 136, 26, 181, 190, 49, 189, 0, 193, 0, 129, 0, 0, 11, 198, 154, 64, 148, 232, 63, 65, 43, 241, 247, 64, 0, 127, 0, 0, 24, 86, 118, 192, 148, 232, 63, 65, 49, 189, 0, 193, 0, 127, 0, 0, 75, 205, 154, 64, 148, 232, 63, 65, 218, 187, 247, 64, 0, 127, 0, 0, 153, 71, 118, 192, 148, 232, 63, 65, 217, 215, 0, 193, 0, 127, 0, 0, 24, 86, 118, 192, 136, 26, 181, 190, 49, 189, 0, 193, 131, 0, 239, 0, 153, 71, 118, 192, 136, 26, 181, 190, 217, 215, 0, 193, 131, 0, 239, 0, 24, 86, 118, 192, 148, 232, 63, 65, 49, 189, 0, 193, 131, 0, 239, 0, 153, 71, 118, 192, 148, 232, 63, 65, 217, 215, 0, 193, 131, 0, 239, 0, 11, 198, 154, 64, 148, 232, 63, 65, 43, 241, 247, 64, 125, 0, 17, 0, 75, 205, 154, 64, 148, 232, 63, 65, 218, 187, 247, 64, 125, 0, 17, 0, 11, 198, 154, 64, 136, 26, 181, 190, 43, 241, 247, 64, 125, 0, 17, 0, 75, 205, 154, 64, 136, 26, 181, 190, 218, 187, 247, 64, 125, 0, 17, 0 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 2, 0, 1, 0, 3, 0, 4, 0, 5, 0, 6, 0, 6, 0, 5, 0, 7, 0, 8, 0, 9, 0, 10, 0, 10, 0, 9, 0, 11, 0, 12, 0, 13, 0, 14, 0, 14, 0, 13, 0, 15, 0 ),
"blend_shape_data": [  ],
"format": 97539,
"index_count": 24,
"name": "default",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 16
}
surfaces/5 = {
"aabb": AABB( -3.849, -0.353718, -8.0527, 8.68657, 12.348, 15.8009 ),
"array_data": PoolByteArray( 75, 205, 154, 64, 148, 232, 63, 65, 218, 187, 247, 64, 111, 0, 195, 0, 61, 0, 111, 127, 0, 60, 0, 0, 153, 71, 118, 192, 148, 232, 63, 65, 217, 215, 0, 193, 111, 0, 195, 0, 61, 0, 111, 127, 0, 0, 0, 0, 75, 205, 154, 64, 136, 26, 181, 190, 218, 187, 247, 64, 111, 0, 195, 0, 61, 0, 111, 127, 0, 60, 0, 60, 153, 71, 118, 192, 136, 26, 181, 190, 217, 215, 0, 193, 111, 0, 195, 0, 61, 0, 111, 127, 0, 0, 0, 60, 11, 198, 154, 64, 136, 26, 181, 190, 43, 241, 247, 64, 145, 0, 61, 0, 61, 0, 111, 129, 0, 60, 0, 60, 24, 86, 118, 192, 136, 26, 181, 190, 49, 189, 0, 193, 145, 0, 61, 0, 61, 0, 111, 129, 0, 0, 0, 60, 11, 198, 154, 64, 148, 232, 63, 65, 43, 241, 247, 64, 145, 0, 61, 0, 61, 0, 111, 129, 0, 60, 0, 0, 24, 86, 118, 192, 148, 232, 63, 65, 49, 189, 0, 193, 145, 0, 61, 0, 61, 0, 111, 129, 0, 0, 0, 0 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 2, 0, 1, 0, 3, 0, 4, 0, 5, 0, 6, 0, 6, 0, 5, 0, 7, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 12,
"material": SubResource( 4 ),
"name": "image",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 8
}
_sections_unfolded = [ "surface_2", "surface_4", "surface_4/material", "surface_6", "surface_6/material" ]

[sub_resource type="Animation" id=6]

length = 3.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.9, 1.4, 1.9, 2.4, 2.9, 3.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.34902, 0.34902, 1 ), Color( 1, 0.941176, 0.34902, 1 ), Color( 0.384314, 1, 0.34902, 1 ), Color( 0.34902, 0.968627, 1, 1 ), Color( 0.34902, 0.372549, 1, 1 ), Color( 0.901961, 0.34902, 1, 1 ), Color( 1, 0.34902, 0.576471, 1 ), Color( 1, 0.34902, 0.34902, 1 ) ]
}

[sub_resource type="SphereMesh" id=7]

material = ExtResource( 23 )
custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
flip_faces = false
radius = 12.0
height = 24.0
radial_segments = 32
rings = 36
is_hemisphere = false
_sections_unfolded = [ "material" ]

[sub_resource type="SphereMesh" id=8]

material = ExtResource( 3 )
custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
flip_faces = false
radius = 6.0
height = 12.0
radial_segments = 32
rings = 32
is_hemisphere = false
_sections_unfolded = [ "material" ]

[node name="TIOS" type="Spatial" index="0"]
script = ExtResource( 1 )

[node name="camera_menu" type="Camera" parent="." index="0"]
transform = Transform( 0.642788, 0.383022, -0.663414, 0, 0.866025, 0.5, 0.766044, -0.321394, 0.55667, -64, 159.848, 25 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 45.9
size = 1.0
near = 0.1
far = 512.0
_sections_unfolded = [ "Transform" ]

[node name="menu_anim" type="AnimationPlayer" parent="camera_menu" index="0"]
root_node = NodePath("..")
autoplay = "menu"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 0.1
anims/menu = SubResource( 1 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="camera_rig" type="Position3D" parent="." index="1"]
transform = Transform( 1, 0, 0, 0, 0.913546, -0.406737, 0, 0.406737, 0.913545, -8.23593, 29.161, 950.318 )
script = ExtResource( 2 )
_sections_unfolded = [ "Transform", "script" ]
rotate_speed = 1.0
move_speed = 1.0
move_speed_lr = 1.0
move_speed_fb = 1.0
terrain_height = 64
water_height = 22
map_size = Vector2( 2048, 2048 )

[node name="POV" type="Camera" parent="camera_rig" index="0"]
transform = Transform( 1, 0, 0, 0, 0.378486, 0.925608, 0, -0.925608, 0.378486, 0, 66.6025, 0 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 90.0
size = 1.0
near = 4.0
far = 768.0
_sections_unfolded = [ "Transform" ]

[node name="player" type="MeshInstance" parent="camera_rig" index="1"]
transform = Transform( 1, 0, 0, 0, 1, -1.19209e-07, 0, 2.08616e-07, 1, 0.0433702, 3.25729, -0.522583 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 2 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "mesh" ]

[node name="system" type="Node" parent="." index="2"]

[node name="SUN" type="DirectionalLight" parent="system" index="0"]
transform = Transform( 0.429547, -0.852165, 0.298836, 0.5, 0.5, 0.707106, -0.75199, -0.154317, 0.640856, -0.893688, 301.399, -0.614712 )
layers = 1
light_color = Color( 1, 0.870588, 0.486275, 1 )
light_energy = 16.0
light_indirect_energy = 0.0
light_negative = false
light_specular = 1.0
light_bake_mode = 0
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0.0862745, 0.2, 0.427451, 1 )
shadow_bias = 0.0
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.4
directional_shadow_blend_splits = true
directional_shadow_normal_bias = 1.14
directional_shadow_bias_split_scale = 0.04
directional_shadow_depth_range = 1
directional_shadow_max_distance = 386.0
_sections_unfolded = [ "Directional Shadow", "Editor", "Light", "Shadow", "Transform" ]

[node name="enviroment" type="WorldEnvironment" parent="system" index="1"]
environment = ExtResource( 4 )
_sections_unfolded = [ "environment" ]

[node name="sound_sea" type="AudioStreamPlayer" parent="system" index="2"]
stream = ExtResource( 5 )
volume_db = -6.0
pitch_scale = 1.0
autoplay = true
stream_paused = false
mix_target = 0
bus = "Master"
script = ExtResource( 6 )
_sections_unfolded = [ "script", "stream" ]

[node name="sound_crickets" type="AudioStreamPlayer" parent="system" index="3"]
stream = ExtResource( 7 )
volume_db = 3.0
pitch_scale = 1.001
autoplay = true
stream_paused = false
mix_target = 0
bus = "Master"
script = ExtResource( 6 )

[node name="sound_soundscape" type="AudioStreamPlayer" parent="system" index="4"]
stream = ExtResource( 8 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = true
stream_paused = false
mix_target = 0
bus = "Master"
script = ExtResource( 6 )

[node name="world_map" parent="." index="3" instance=ExtResource( 9 )]

[node name="grass" parent="world_map" index="1"]
visible = false
spacing = 8.0

[node name="grass2" parent="world_map" index="2"]
draw_pass_1 = SubResource( 5 )
_sections_unfolded = [ "Draw Passes", "Geometry", "Process Material", "draw_pass_1", "material_override", "process_material", "script" ]
spacing = 10.0

[node name="paprotes" parent="world_map" index="3"]
cast_shadow = 0
spacing = 16.0

[node name="GUI" type="Control" parent="." index="4"]
editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 14 )
_sections_unfolded = [ "Theme", "theme" ]
__meta__ = {
"_edit_lock_": true
}

[node name="demo" type="Control" parent="GUI" index="0"]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="top-left" type="Control" parent="GUI/demo" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 12.0
margin_top = 12.0
margin_right = 12.0
margin_bottom = 12.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="logo" type="Sprite" parent="GUI/demo/top-left" index="0"]
modulate = Color( 1, 1, 1, 0.25098 )
texture = ExtResource( 15 )
centered = false
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="bottom-middle" type="Control" parent="GUI/demo" index="1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="fps" type="Label" parent="GUI/demo/bottom-middle" index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.5
margin_top = -39.5
margin_right = 50.5
margin_bottom = 39.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "TECH DEMO [60FPS]
"
align = 2
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 16 )
_sections_unfolded = [ "Custom Colors", "Custom Constants" ]

[node name="minimap" type="Control" parent="GUI/demo" index="2"]
visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -113.0
margin_top = 12.0
margin_right = -73.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="map" type="TextureRect" parent="GUI/demo/minimap" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 39.5918
margin_top = 0.704132
margin_right = 103.592
margin_bottom = 64.7041
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 17 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_edit_lock_": true
}

[node name="intro" type="Control" parent="GUI" index="1"]
editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
__meta__ = {
"_edit_lock_": true
}

[node name="top" type="Control" parent="GUI/intro" index="0"]
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="applications" type="HBoxContainer" parent="GUI/intro/top" index="0"]
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -181.0
margin_top = 60.0
margin_right = 180.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 128
alignment = 1
_sections_unfolded = [ "Custom Constants" ]

[node name="gimp" type="Control" parent="GUI/intro/top/applications" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="logo" type="Sprite" parent="GUI/intro/top/applications/gimp" index="0"]
modulate = Color( 1, 1, 1, 0.25098 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 18 )
offset = Vector2( 0, 32 )
_sections_unfolded = [ "Offset", "Transform", "Visibility", "texture" ]

[node name="godot" type="Control" parent="GUI/intro/top/applications" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 128.0
margin_right = 128.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="logo" type="Sprite" parent="GUI/intro/top/applications/godot" index="0"]
modulate = Color( 1, 1, 1, 0.25098 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 19 )
offset = Vector2( 0, 32 )
_sections_unfolded = [ "Offset", "Transform", "Visibility", "texture" ]

[node name="wings3d" type="Control" parent="GUI/intro/top/applications" index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 256.0
margin_right = 256.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="logo" type="Sprite" parent="GUI/intro/top/applications/wings3d" index="0"]
modulate = Color( 1, 1, 1, 0.25098 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 20 )
offset = Vector2( 0, 32 )
_sections_unfolded = [ "Offset", "Transform", "Visibility", "texture" ]

[node name="p1x" type="Control" parent="GUI/intro/top/applications" index="3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 384.0
margin_right = 384.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="logo" type="Sprite" parent="GUI/intro/top/applications/p1x" index="0"]
modulate = Color( 1, 1, 1, 0.25098 )
scale = Vector2( 3, 3 )
texture = ExtResource( 21 )
offset = Vector2( 0, 6 )
_sections_unfolded = [ "Offset", "Transform", "Visibility", "texture" ]

[node name="center" type="Control" parent="GUI/intro" index="1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin" ]

[node name="tios" type="Sprite" parent="GUI/intro/center" index="0"]
editor/display_folded = true
modulate = Color( 0.857723, 0.350902, 1, 1 )
position = Vector2( 0, -30 )
texture = ExtResource( 15 )
_sections_unfolded = [ "Offset", "Transform", "Visibility", "texture" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="GUI/intro/center/tios" index="0"]
root_node = NodePath("..")
autoplay = "gay"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/gay = SubResource( 6 )
blend_times = [  ]

[node name="bottom-middle" type="Control" parent="GUI/intro" index="2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="info" type="Label" parent="GUI/intro/bottom-middle" index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -207.0
margin_top = -111.0
margin_right = 206.0
margin_bottom = -21.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/line_spacing = -12
custom_constants/shadow_offset_y = 1
text = "press A to START
left THUMB to MOVE / right THUMB to LOOK
F for FULLSCREEN / ESC for QUIT"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Custom Colors", "Custom Constants" ]

[node name="corners" parent="GUI" index="2" instance=ExtResource( 22 )]

[node name="plasma" type="MeshInstance" parent="." index="5"]
transform = Transform( 0.135395, -0.989964, -0.0404933, -0.0726404, -0.0506779, 0.99607, -0.988125, -0.131922, -0.0787729, 52.802, 46.3345, 218.222 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 7 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Transform", "mesh" ]

[node name="amiga" type="MeshInstance" parent="." index="6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.56197, 44.327, 197.355 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 8 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "mesh" ]

[connection signal="finished" from="system/sound_sea" to="system/sound_sea" method="_on_sound_finished"]
[connection signal="finished" from="system/sound_crickets" to="system/sound_crickets" method="_on_sound_finished"]
[connection signal="finished" from="system/sound_soundscape" to="system/sound_soundscape" method="_on_sound_finished"]

[editable path="world_map"]
